# fly-statics-index-resolution

./: Cargo.toml  Dockerfile  fly.toml
src/: env.rs  main.rs
static/: index.html
